# opm-python

./: .gitignore  CMakeLists.txt  CMakeLists_files.cmake  CopyHeaders.cmake  GenerateKeywords.cmake  README.md  dune.module  index.html  opm-python-prereqs.cmake
.github/workflows/: python_sphinx_docs.yml
cmake/cxx/: create_pybind11_builtin.cpp
cmake/modules/: OpmPythonAddEmbeddedTests.cmake  OpmPythonAddTests.cmake  OpmPythonCopySourceFilesToBuildDir.cmake  OpmPythonFindOpmCommon.cmake  OpmPythonFindPybind11.cmake  OpmPythonFindPython.cmake  OpmPythonGenerateBuiltinKwCpp.cmake  OpmPythonGenerateDocStrings.cmake  OpmPythonGeneratePybind11BuiltinKw.cmake  OpmPythonOpmInit.cmake  OpmPythonOpmLibMain.cmake  OpmPythonSetupInstall.cmake  OpmPythonSetupOpmCommonBindings.cmake  OpmPythonSetupOpmSimulatorsBindings.cmake  OpmPythonSetupPackaging.cmake
cxx/simulators/: PyBlackOilSimulator.cpp
docs/: Makefile  README.md  docstrings_common.json  docstrings_simulators.json  pyproject.toml
docs/docs/: conf.py  simulators.rst
docs/src/opm_python_docs/: sphinx_ext_docstrings.py
ghaction/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  python.html  search.html  searchindex.js
ghaction/.doctrees/: environment.pickle  index.doctree  introduction.doctree
helper_scripts/: discover_opmcommon_tests.py
jenkins/: build.sh
pr7/: .buildinfo  common.html  embedded.html  genindex.html  index.html  introduction.html  search.html  searchindex.js  simulators.html
pr7/.doctrees/: common.doctree  embedded.doctree  environment.pickle  index.doctree  introduction.doctree  simulators.doctree
pybind11/opmcommon/: eclipse_state.cpp  schedule.cpp  schedule_state.cpp  summary_state.cpp  well.cpp
pypi/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  python.html  search.html
pypi/.doctrees/: environment.pickle  python.doctree
pypi/_sources/: python.rst.txt
pypi/scripts/: README.md  pyproject.toml
pypi/scripts/src/opm_pypi_tools/: build_dist.py  build_opm.py  constants.py  docker.py  helpers.py  main.py
pypi/templates/: Dockerfile  README.md  manylinux-build.sh  pyproject.toml  setup.py
pypi/templates/build-opm/: Dockerfile  entrypoint.sh  user-config.jam
tests/opmcommon/: test_connection.py  test_ecloutput.py  test_egrid.py  test_emodel.py  test_field_props.py  test_parse.py  test_parse_deck.py  test_props.py  test_schedule.py  test_state.py  test_time_vector.py  test_wells.py
tests/opmsimulators/: test_basic.py  test_fluidstate_variables.py  test_mpi.py  test_primary_variables.py  test_schedule.py  test_throw.py
