cmake_minimum_required (VERSION 3.10)
project(opm-python C CXX)
option(SIBLING_SEARCH "Search for other modules in sibling directories?" ON)
option(OPM_INSTALL_PYTHON "Install python bindings?" ON)
list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
set(GENERATED_PROJECT_DIR opm-python)  # NOTE: relative to $PROJECT_BINARY_DIR
set(TEMP_GEN_DIR ${GENERATED_PROJECT_DIR}/tmp_gen)
file(MAKE_DIRECTORY ${TEMP_GEN_DIR})
set(opm-common_PYBIND11_TARGET opmcommon_python)
include(OpmPythonFindPython)
include(OpmPythonFindOpmCommon)
include(OpmPythonFindPybind11)
include(OpmPythonOpmInit)
include(OpmPythonOpmLibMain)
set(opm-simulators_SOURCE_DIR "${opm-simulators_DIR}/..")
include(OpmPythonGenerateDocStrings)
include(OpmPythonSetupOpmCommonBindings)
include(OpmPythonSetupOpmSimulatorsBindings)
include(OpmPythonGeneratePybind11BuiltinKw)
include(OpmPythonCopySourceFilesToBuildDir)
include(OpmPythonAddTests)
include(OpmPythonAddEmbeddedTests)
include(OpmPythonSetupPackaging)
#include(OpmPythonSetupInstall)
