[tool.poetry]
name = "opm-python-docs"
version = "0.1.0"
description = """Helper scripts for generating sphinx documentation for the \
                 opm-python Python bindings"""
authors = ["Håkon Hægland <hakon.hagland@gmail.com>"]
readme = "README.md"
packages = [{ include = "opm_python_docs", from = "src"}]
license = "GPL3"
repository = "https://github.com/OPM/opm-python"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
click = "^8.1.7"
sphinx-versioned-docs = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
